src/objects/Opportunity_Features__c.object
<CustomObject>
    <description>Opportunity - Features junction object</description>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <formula>Features__r.Feature_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <formula>Features__r.Feature_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity - Features lookup</description>
        <label>Features</label>
        <referenceTo>Features__c</referenceTo>
        <relationshipName>Opportunity_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity lookup</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Descriptive Feature</label>
    <nameField>
        <displayFormat>DF-{00000000}</displayFormat>
        <label>Opportunity Features Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Descriptive Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>